# control-kalman

./: .gitignore  ARMSEckf.txt  ARMSEsrcf.txt  CKF.cpp  CKF_Old.cpp  CMakeLists.txt  CSRF.cpp  SRCF.cpp  SRIF.cpp  analysis_tools.hpp  compile.bat  data_generator.hpp  data_tools_2.hpp  debug_SRCF.cpp  generate.cpp  kalman.hpp  main.cpp  models.hpp  plot_bin.py  test_plot_bin.py  test_simple.cpp  time_generator.hpp  timingsCKF.txt  timingsSRCF.txt  txt_reader.hpp
